--- a/src/styles.css
+++ b/src/styles.css
@@ -6,14 +6,23 @@ body,html{
     background-image: url("./assets/angadBcg.jpg");
     height: 100%;
 
+
 }
 
 .circle{
     border-radius:50% 50%;
 }
 
-.btn
-{
-    
 
+
+.right{
+    float:right;
+}
+.divsmall{
+        padding:3px;
+}
+
+.inlblock
+{
+    display: inline-block;
 }
